          - fixed assigning quality to items
          - made "esc" work properly
        gui/gm-editor handles lua tables properly
        help: now recognizes built-in commands, like "help"
        manipulator: fixed crash when selecting custom professions when none are found
        remotefortressreader: fixed crash when attempting to send map info when no map was loaded
        search: fixed crash in unit list after cancelling a job
        stockpiles: now checks/sanitizes filenames when saving
        stocks: fixed a crash when right-clicking
        steam-engine:
          - fixed a crash on arena load
          - number keys (e.g. 2/8) take priority over cursor keys when applicable
        tweak fps-min fixed
        tweak farm-plot-select: Stopped controls from appearing when plots weren't fully built
        workflow: Fixed some issues with stuck jobs
          - Note: Existing stuck jobs must be cancelled and re-added
        zone: Fixed a crash when using "zone set" (and a few other potential crashes)
    Misc Improvements
        autolabor:
          - Stopped modification of labors that shouldn't be modified for brokers/diplomats
          - Prioritize skilled dwarves more efficiently
          - Prevent dwarves from running away with tools from previous jobs
        dwarfmonitor:
          - widgets' positions, formats, etc. are now customizable (see Readme)
          - weather display now separated from the date display
          - New mouse cursor widget
        dfstatus: Can enable/disable individual categories and customize metal bar list
        full-heal: "-r" option removes corpses
        gui/gm-editor
          - Pointers can now be displaced
          - Added some useful aliases: "item" for the selected item, "screen" for the current screen, etc.
          - Now avoids errors with unrecognized types
        gui/hack-wish: renamed to gui/create-item
        "keybinding list" accepts a context
        lever:
          - Lists lever names